--- a/mappings/valve_bone_mapping.json
+++ b/mappings/valve_bone_mapping.json
@@ -1,6 +1,6 @@
 {
   "format_version": "2.0",
-  "description": "Universal GTA SA Converter Bone Mappings",
+  "description": "Universal GTA SA Converter Bone Mappings (ValveBiped Optimized - Finger2 & Finger21 Primary)",
   "mappings": [
     {
       "index": 0,
@@ -11,7 +11,7 @@
       "confidence": 1.0
     },
     {
-  "index": 1,
+      "index": 1,
       "source_bone": "ValveBiped.Bip01_Spine",
       "target_bone": " Spine",
       "enabled": true,
@@ -19,7 +19,7 @@
       "confidence": 1.0
     },
     {
-  "index": 2,
+      "index": 2,
       "source_bone": "ValveBiped.Bip01_Spine1",
       "target_bone": " Spine1",
       "enabled": true,
@@ -27,7 +27,7 @@
       "confidence": 1.0
     },
     {
-  "index": 3,
+      "index": 3,
       "source_bone": "ValveBiped.Bip01_Spine4",
       "target_bone": " Spine1",
       "enabled": true,
@@ -35,7 +35,7 @@
       "confidence": 1.0
     },
     {
-  "index": 4,
+      "index": 4,
       "source_bone": "ValveBiped.Bip01_Spine2",
       "target_bone": " Spine1",
       "enabled": true,
@@ -43,7 +43,7 @@
       "confidence": 1.0
     },
     {
-  "index": 5,
+      "index": 5,
       "source_bone": "ValveBiped.Bip01_Neck1",
       "target_bone": " Neck",
       "enabled": true,
@@ -51,7 +51,7 @@
       "confidence": 1.0
     },
     {
-  "index": 6,
+      "index": 6,
       "source_bone": "ValveBiped.Bip01_Head1",
       "target_bone": " Head",
       "enabled": true,
@@ -59,7 +59,7 @@
       "confidence": 1.0
     },
     {
-  "index": 7,
+      "index": 7,
       "source_bone": "ValveBiped.Bip01_L_Hand",
       "target_bone": " L Hand",
       "enabled": true,
@@ -67,7 +67,7 @@
       "confidence": 1.0
     },
     {
-  "index": 8,
+      "index": 8,
       "source_bone": "ValveBiped.Bip01_L_Finger0",
       "target_bone": " L Hand",
       "enabled": true,
@@ -75,7 +75,7 @@
       "confidence": 1.0
     },
     {
-  "index": 9,
+      "index": 9,
       "source_bone": "ValveBiped.Bip01_L_Finger01",
       "target_bone": " L Hand",
       "enabled": true,
@@ -83,7 +83,7 @@
       "confidence": 1.0
     },
     {
-  "index": 10,
+      "index": 10,
       "source_bone": "ValveBiped.Bip01_L_Finger02",
       "target_bone": " L Hand",
       "enabled": true,
@@ -91,15 +91,7 @@
       "confidence": 1.0
     },
     {
-  "index": 11,
-      "source_bone": "ValveBiped.Bip01_L_Finger1",
-      "target_bone": " L Finger",
-      "enabled": true,
-      "detection_method": "Manual",
-      "confidence": 1.0
-    },
-    {
-  "index": 12,
+      "index": 11,
       "source_bone": "ValveBiped.Bip01_L_Finger11",
       "target_bone": "L Finger01",
       "enabled": true,
@@ -107,7 +99,7 @@
       "confidence": 1.0
     },
     {
-  "index": 13,
+      "index": 12,
       "source_bone": "ValveBiped.Bip01_L_Finger12",
       "target_bone": "L Finger01",
       "enabled": true,
@@ -115,23 +107,7 @@
       "confidence": 1.0
     },
     {
-  "index": 14,
-      "source_bone": "ValveBiped.Bip01_L_Finger2",
-      "target_bone": " L Finger",
-      "enabled": true,
-      "detection_method": "Duplicated",
-      "confidence": 1.0
-    },
-    {
-  "index": 15,
-      "source_bone": "ValveBiped.Bip01_L_Finger21",
-      "target_bone": "L Finger01",
-      "enabled": true,
-      "detection_method": "Duplicated",
-      "confidence": 1.0
-    },
-    {
-  "index": 16,
+      "index": 13,
       "source_bone": "ValveBiped.Bip01_L_Finger22",
       "target_bone": "L Finger01",
       "enabled": true,
@@ -139,15 +115,7 @@
       "confidence": 1.0
     },
     {
-  "index": 17,
-      "source_bone": "ValveBiped.Bip01_L_Finger3",
-      "target_bone": " L Finger",
-      "enabled": true,
-      "detection_method": "Duplicated",
-      "confidence": 1.0
-    },
-    {
-  "index": 18,
+      "index": 14,
       "source_bone": "ValveBiped.Bip01_L_Finger31",
       "target_bone": "L Finger01",
       "enabled": true,
@@ -155,7 +123,7 @@
       "confidence": 1.0
     },
     {
-  "index": 19,
+      "index": 15,
       "source_bone": "ValveBiped.Bip01_L_Finger32",
       "target_bone": "L Finger01",
       "enabled": true,
@@ -163,15 +131,7 @@
       "confidence": 1.0
     },
     {
-  "index": 20,
-      "source_bone": "ValveBiped.Bip01_L_Finger4",
-      "target_bone": " L Finger",
-      "enabled": true,
-      "detection_method": "Duplicated",
-      "confidence": 1.0
-    },
-    {
-  "index": 21,
+      "index": 16,
       "source_bone": "ValveBiped.Bip01_L_Finger41",
       "target_bone": "L Finger01",
       "enabled": true,
@@ -179,7 +139,7 @@
       "confidence": 1.0
     },
     {
-  "index": 22,
+      "index": 17,
       "source_bone": "ValveBiped.Bip01_L_Finger42",
       "target_bone": "L Finger01",
       "enabled": true,
@@ -187,31 +147,71 @@
       "confidence": 1.0
     },
     {
-  "index": 23,
+      "index": 18,
+      "source_bone": "ValveBiped.Bip01_L_Finger21",
+      "target_bone": "L Finger01",
+      "enabled": true,
+      "detection_method": "Duplicated",
+      "confidence": 1.0
+    },
+    {
+      "index": 19,
+      "source_bone": "ValveBiped.Bip01_L_Finger1",
+      "target_bone": " L Finger",
+      "enabled": true,
+      "detection_method": "Manual",
+      "confidence": 1.0
+    },
+    {
+      "index": 20,
+      "source_bone": "ValveBiped.Bip01_L_Finger3",
+      "target_bone": " L Finger",
+      "enabled": true,
+      "detection_method": "Duplicated",
+      "confidence": 1.0
+    },
+    {
+      "index": 21,
+      "source_bone": "ValveBiped.Bip01_L_Finger4",
+      "target_bone": " L Finger",
+      "enabled": true,
+      "detection_method": "Duplicated",
+      "confidence": 1.0
+    },
+    {
+      "index": 22,
+      "source_bone": "ValveBiped.Bip01_L_Finger2",
+      "target_bone": " L Finger",
+      "enabled": true,
+      "detection_method": "Duplicated",
+      "confidence": 1.0
+    },
+    {
+      "index": 23,
       "source_bone": "ValveBiped.Bip01_L_Ulna",
       "target_bone": " L ForeArm",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 24,
+      "index": 24,
       "source_bone": "ValveBiped.Bip01_L_Wrist",
       "target_bone": " L Hand",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 25,
+      "index": 25,
       "source_bone": "ValveBiped.Bip01_L_Elbow",
       "target_bone": " L ForeArm",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 26,
+      "index": 26,
       "source_bone": "ValveBiped.Bip01_L_Forearm",
       "target_bone": " L ForeArm",
       "enabled": true,
@@ -219,15 +219,15 @@
       "confidence": 1.0
     },
     {
-  "index": 27,
+      "index": 27,
       "source_bone": "ValveBiped.Bip01_L_Bicep",
       "target_bone": " L UpperArm",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 28,
+      "index": 28,
       "source_bone": "ValveBiped.Bip01_L_UpperArm",
       "target_bone": " L UpperArm",
       "enabled": true,
@@ -235,23 +235,23 @@
       "confidence": 1.0
     },
     {
-  "index": 29,
+      "index": 29,
       "source_bone": "ValveBiped.Bip01_L_Trapezius",
       "target_bone": "Bip01 L Clavicle",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 30,
+      "index": 30,
       "source_bone": "ValveBiped.Bip01_L_Shoulder",
       "target_bone": "Bip01 L Clavicle",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 31,
+      "index": 31,
       "source_bone": "ValveBiped.Bip01_L_Clavicle",
       "target_bone": "Bip01 L Clavicle",
       "enabled": true,
@@ -259,7 +259,7 @@
       "confidence": 1.0
     },
     {
-  "index": 32,
+      "index": 32,
       "source_bone": "ValveBiped.Bip01_R_Hand",
       "target_bone": " R Hand",
       "enabled": true,
@@ -267,7 +267,7 @@
       "confidence": 1.0
     },
     {
-  "index": 33,
+      "index": 33,
       "source_bone": "ValveBiped.Bip01_R_Finger0",
       "target_bone": " R Hand",
       "enabled": true,
@@ -275,7 +275,7 @@
       "confidence": 1.0
     },
     {
-  "index": 34,
+      "index": 34,
       "source_bone": "ValveBiped.Bip01_R_Finger01",
       "target_bone": " R Hand",
       "enabled": true,
@@ -283,7 +283,7 @@
       "confidence": 1.0
     },
     {
-  "index": 35,
+      "index": 35,
       "source_bone": "ValveBiped.Bip01_R_Finger02",
       "target_bone": " R Hand",
       "enabled": true,
@@ -291,15 +291,7 @@
       "confidence": 1.0
     },
     {
-  "index": 36,
-      "source_bone": "ValveBiped.Bip01_R_Finger1",
-      "target_bone": " R Finger",
-      "enabled": true,
-      "detection_method": "Manual",
-      "confidence": 1.0
-    },
-    {
-  "index": 37,
+      "index": 36,
       "source_bone": "ValveBiped.Bip01_R_Finger11",
       "target_bone": "R Finger01",
       "enabled": true,
@@ -307,7 +299,7 @@
       "confidence": 1.0
     },
     {
-  "index": 38,
+      "index": 37,
       "source_bone": "ValveBiped.Bip01_R_Finger12",
       "target_bone": "R Finger01",
       "enabled": true,
@@ -315,23 +307,7 @@
       "confidence": 1.0
     },
     {
-  "index": 39,
-      "source_bone": "ValveBiped.Bip01_R_Finger2",
-      "target_bone": " R Finger",
-      "enabled": true,
-      "detection_method": "Duplicated",
-      "confidence": 1.0
-    },
-    {
-  "index": 40,
-      "source_bone": "ValveBiped.Bip01_R_Finger21",
-      "target_bone": "R Finger01",
-      "enabled": true,
-      "detection_method": "Duplicated",
-      "confidence": 1.0
-    },
-    {
-  "index": 41,
+      "index": 38,
       "source_bone": "ValveBiped.Bip01_R_Finger22",
       "target_bone": "R Finger01",
       "enabled": true,
@@ -339,15 +315,7 @@
       "confidence": 1.0
     },
     {
-  "index": 42,
-      "source_bone": "ValveBiped.Bip01_R_Finger3",
-      "target_bone": " R Finger",
-      "enabled": true,
-      "detection_method": "Duplicated",
-      "confidence": 1.0
-    },
-    {
-  "index": 43,
+      "index": 39,
       "source_bone": "ValveBiped.Bip01_R_Finger31",
       "target_bone": "R Finger01",
       "enabled": true,
@@ -355,7 +323,7 @@
       "confidence": 1.0
     },
     {
-  "index": 44,
+      "index": 40,
       "source_bone": "ValveBiped.Bip01_R_Finger32",
       "target_bone": "R Finger01",
       "enabled": true,
@@ -363,15 +331,7 @@
       "confidence": 1.0
     },
     {
-  "index": 45,
-      "source_bone": "ValveBiped.Bip01_R_Finger4",
-      "target_bone": " R Finger",
-      "enabled": true,
-      "detection_method": "Duplicated",
-      "confidence": 1.0
-    },
-    {
-  "index": 46,
+      "index": 41,
       "source_bone": "ValveBiped.Bip01_R_Finger41",
       "target_bone": "R Finger01",
       "enabled": true,
@@ -379,7 +339,7 @@
       "confidence": 1.0
     },
     {
-  "index": 47,
+      "index": 42,
       "source_bone": "ValveBiped.Bip01_R_Finger42",
       "target_bone": "R Finger01",
       "enabled": true,
@@ -387,47 +347,87 @@
       "confidence": 1.0
     },
     {
-  "index": 48,
+      "index": 43,
+      "source_bone": "ValveBiped.Bip01_R_Finger21",
+      "target_bone": "R Finger01",
+      "enabled": true,
+      "detection_method": "Duplicated",
+      "confidence": 1.0
+    },
+    {
+      "index": 44,
+      "source_bone": "ValveBiped.Bip01_R_Finger1",
+      "target_bone": " R Finger",
+      "enabled": true,
+      "detection_method": "Manual",
+      "confidence": 1.0
+    },
+    {
+      "index": 45,
+      "source_bone": "ValveBiped.Bip01_R_Finger3",
+      "target_bone": " R Finger",
+      "enabled": true,
+      "detection_method": "Duplicated",
+      "confidence": 1.0
+    },
+    {
+      "index": 46,
+      "source_bone": "ValveBiped.Bip01_R_Finger4",
+      "target_bone": " R Finger",
+      "enabled": true,
+      "detection_method": "Duplicated",
+      "confidence": 1.0
+    },
+    {
+      "index": 47,
+      "source_bone": "ValveBiped.Bip01_R_Finger2",
+      "target_bone": " R Finger",
+      "enabled": true,
+      "detection_method": "Duplicated",
+      "confidence": 1.0
+    },
+    {
+      "index": 48,
       "source_bone": "ValveBiped.Bip01_R_Ulna",
       "target_bone": " R ForeArm",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 49,
+      "index": 49,
       "source_bone": "ValveBiped.Bip01_R_Wrist",
       "target_bone": " R Hand",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 50,
+      "index": 50,
       "source_bone": "ValveBiped.Bip01_R_Shoulder",
       "target_bone": "Bip01 R Clavicle",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 51,
+      "index": 51,
       "source_bone": "ValveBiped.Bip01_R_Bicep",
       "target_bone": " R UpperArm",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 52,
+      "index": 52,
       "source_bone": "ValveBiped.Bip01_R_Elbow",
       "target_bone": " R ForeArm",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 53,
+      "index": 53,
       "source_bone": "ValveBiped.Bip01_R_UpperArm",
       "target_bone": " R UpperArm",
       "enabled": true,
@@ -435,15 +435,15 @@
       "confidence": 1.0
     },
     {
-  "index": 54,
+      "index": 54,
       "source_bone": "ValveBiped.Bip01_R_Trapezius",
       "target_bone": "Bip01 R Clavicle",
       "enabled": true,
       "detection_method": "Duplicated",
-      "confidence": 0.800000011920929
+      "confidence": 0.8
     },
     {
-  "index": 55,
+      "index": 55,
       "source_bone": "ValveBiped.Bip01_R_Clavicle",
       "target_bone": "Bip01 R Clavicle",
       "enabled": true,
@@ -451,7 +451,7 @@
       "confidence": 1.0
     },
     {
-  "index": 56,
+      "index": 56,
       "source_bone": "ValveBiped.Bip01_L_Thigh",
       "target_bone": " L Thigh",
       "enabled": true,
@@ -459,7 +459,7 @@
       "confidence": 1.0
     },
     {
-  "index": 57,
+      "index": 57,
       "source_bone": "ValveBiped.Bip01_L_Calf",
       "target_bone": " L Calf",
       "enabled": true,
@@ -467,7 +467,7 @@
       "confidence": 1.0
     },
     {
-  "index": 58,
+      "index": 58,
       "source_bone": "ValveBiped.Bip01_L_Foot",
       "target_bone": " L Foot",
       "enabled": true,
@@ -475,7 +475,7 @@
       "confidence": 1.0
     },
     {
-  "index": 59,
+      "index": 59,
       "source_bone": "ValveBiped.Bip01_R_Forearm",
       "target_bone": " R ForeArm",
       "enabled": true,
@@ -483,7 +483,7 @@
       "confidence": 1.0
     },
     {
-  "index": 60,
+      "index": 60,
       "source_bone": "ValveBiped.Bip01_L_Toe0",
       "target_bone": " L Toe0",
       "enabled": true,
@@ -491,7 +491,7 @@
       "confidence": 1.0
     },
     {
-  "index": 61,
+      "index": 61,
       "source_bone": "ValveBiped.Bip01_R_Thigh",
       "target_bone": " R Thigh",
       "enabled": true,
@@ -499,7 +499,7 @@
       "confidence": 1.0
     },
     {
-  "index": 62,
+      "index": 62,
       "source_bone": "ValveBiped.Bip01_R_Calf",
       "target_bone": " R Calf",
       "enabled": true,
@@ -507,7 +507,7 @@
       "confidence": 1.0
     },
     {
-  "index": 63,
+      "index": 63,
       "source_bone": "ValveBiped.Bip01_R_Foot",
       "target_bone": " R Foot",
       "enabled": true,
@@ -515,7 +515,7 @@
       "confidence": 1.0
     },
     {
-  "index": 64,
+      "index": 64,
       "source_bone": "ValveBiped.Bip01_R_Toe0",
       "target_bone": " R Toe0",
       "enabled": true,
