--- a/mappings/bone_mapping_mixamo_clean.json
+++ b/mappings/bone_mapping_mixamo_clean.json
@@ -1,6 +1,6 @@
 {
   "format_version": "2.0",
-  "description": "Universal GTA SA Converter Bone Mappings - Custom Rig",
+  "description": "Mixamo Rig Clean to GTA SA",
   "author": "YoshiMaincra",
   "mappings": [
     {
