--- a/mappings/accurig_bone_mapping.json
+++ b/mappings/accurig_bone_mapping.json
@@ -1,6 +1,6 @@
 {
   "format_version": "2.0",
-  "description": "Universal GTA SA Converter Bone Mappings",
+  "description": "ActorCore/RealIllusion Accurig to GTA SA",
   "mappings": [
     {
       "index": 0,
