--- a/mappings/rigify_mapping.json
+++ b/mappings/rigify_mapping.json
@@ -1,6 +1,6 @@
 {
   "format_version": "2.0",
-  "description": "Rigify to GTA SA",
+  "description": "Blender Rigify to GTA SA",
   "mappings": [
     {
       "index": 0,
