--- a/mappings/valve_bone_mapping.json
+++ b/mappings/valve_bone_mapping.json
@@ -1,6 +1,6 @@
 {
   "format_version": "2.0",
-  "description": "Universal GTA SA Converter Bone Mappings (ValveBiped Optimized - Finger2 & Finger21 Primary)",
+  "description": "ValveBiped Source Rig to GTA SA",
   "mappings": [
     {
       "index": 0,
