--- a/mappings/valve_l4d_bone_mapping.json
+++ b/mappings/valve_l4d_bone_mapping.json
@@ -1,6 +1,6 @@
 {
   "format_version": "2.0",
-  "description": "Universal GTA SA Converter Bone Mappings",
+  "description": "Valve Left 4 Dead 1/2 Source Rig to GTA SA",
   "mappings": [
     {
       "index": 0,
